refacored embedding of external resources (bootstrap, bootstrap icons, easy mde)

--- a/matman/items/templates/base.html
+++ b/matman/items/templates/base.html
@@ -5,21 +5,15 @@
     <title>{% block title %}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--  Bootstrap  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-
-    <!--  jQuery  -->
-    <!--    <script type="text/javascript" src="{% static "jquery/jquery-3.6.1.min.js" %}"></script>-->
-
-    <!--  Easy MDE  -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
+    {% for resource_name, resource in resources.items %}
+    {% for css_sheet in resource.css %}
+    <!--  css for {{ resource_name }}  -->
+    <link href="{{ css_sheet.href }}" rel="stylesheet" crossorigin="anonymous"{% if css_sheet.integrity %} integrity="{{ css_sheet.integrity }}"{% endif %}>
+    {% endfor %}
+    {% endfor %}
 
     <link href="{% static "css/base.css" %}" rel="stylesheet">
-
-    {% block scripts %}
+    {% block stylesheets %}
     {% endblock %}
 </head>
 <body class="d-flex flex-column h-100">
@@ -35,5 +29,13 @@
     <footer class="footer mt-auto py-3 bg-light p-3">
         {% include "footer.html"  %}
     </footer>
+    {% for resource_name, resource in resources.items %}
+    {% for js in resource.js %}
+    <!--  js for {{ resource_name }}  -->
+    <script src="{{ js.href }}" crossorigin="anonymous"{% if js.integrity %} integrity="{{ js.integrity }}"{% endif %}></script>
+    {% endfor %}
+    {% endfor %}
+    {% block scripts %}
+    {% endblock %}
 </body>
 </html>
