--- a/matman/items/templates/items/comment.html
+++ b/matman/items/templates/items/comment.html
@@ -1,7 +1,7 @@
 {% load matman_tags %}
 <div class="toast show my-1 w-100" role="alert" aria-live="assertive" aria-atomic="true">
   <div class="toast-header">
-    <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Info:"><use xlink:href="#symbol-comment"/></svg>
+    <i class="bi bi-pencil-square"></i>
     <strong class="me-auto">Comment by <a href="{% url "profile" comment.author %}">{{ user.username }}</a></strong>
     <small class="mx-2">
       {{ comment.creation_date|date:"D y-m-d H:m" }}
@@ -11,7 +11,7 @@
     </small>
     <div class="dropdown">
       <button class="btn btn-outline-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#three-dots"/></svg>
+        <i class="bi bi-three-dots"></i>
       </button>
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="{{ comment.get_absolute_url }}">Edit</a></li>
