--- a/matman/items/templates/items/material_create.html
+++ b/matman/items/templates/items/material_create.html
@@ -27,18 +27,18 @@
         {% crispy formset formset_helper %}
     </div>
     <button type="button" name="add" class="btn btn-outline-primary m-1" id="add-more">
-        <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#symbol-plus"/></svg>
+        <i class="bi bi-plus-square"></i>
         Add Picture
     </button>
     <div class="form-buttons m-1">
         <button id="buttonSave" type="submit" value="Save" name="save" class="btn btn-primary">
             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-            <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#symbol-save"/></svg>
+            <i class="bi bi-save2"></i>
             <span class="button-text">Save</span>
         </button>
         <button id="buttonAddAnother" type="submit" value="Save and add another" name="add_other" class="btn btn-secondary" >
             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-            <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#symbol-save"/></svg>
+            <i class="bi bi-save2"></i>
             <span class="button-text">Save and add another</span>
         </button>
     </div>
