--- a/matman/items/templates/items/material_list_cards.html
+++ b/matman/items/templates/items/material_list_cards.html
@@ -7,7 +7,7 @@
 <h1>Materials</h1>
 <p>
     <a href="{% url "add-material" %}" class="btn btn-outline-primary" aria-current="page">
-        <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#plus"/></svg>
+        <i class="bi bi-plus-square"></i>
         Add Material
     </a>
 </p>
@@ -31,7 +31,7 @@
             <p class="card-text">{{ object.short_text }}</p>
 <!--            <a href="#" class="btn btn-primary">Go somewhere</a>-->
             <button class="btn btn-outline-secondary p-1" type="button">
-                <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#bookmark"/></svg>
+                <i class="bi bi-bookmark"></i>
             </button>
       </div>
     </div>
