--- a/matman/items/templates/items/userprofile_edit.html
+++ b/matman/items/templates/items/userprofile_edit.html
@@ -9,7 +9,7 @@
   {% csrf_token %}
   {% crispy form %}
   <button type=submit" class="btn btn-primary">
-    <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#symbol-save"/></svg>
+    <i class="bi bi-save2"></i>
     <span>Save</span>
   </button>
 </form>
