--- a/matman/items/templates/items/borrow_edit.html
+++ b/matman/items/templates/items/borrow_edit.html
@@ -14,11 +14,11 @@
   {% csrf_token %}
   {% crispy form %}
   <button type="button" class="btn btn-outline-secondary" onclick="history.back()">
-    <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#symbol-back"/></svg>
+    <i class="bi bi-arrow-left-square"></i>
     <span>Go back</span>
   </button>
   <button type=submit" class="btn btn-primary">
-    <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#symbol-save"/></svg>
+    <i class="bi bi-save2"></i>
     <span>Save</span>
   </button>
 </form>
