--- a/matman/items/templates/items/scheme_create.html
+++ b/matman/items/templates/items/scheme_create.html
@@ -11,7 +11,7 @@
 <div class="form-buttons m-1">
     <button id="buttonSave" type="submit" value="Save" name="save" class="btn btn-primary" onclick="this.classList.add('loading')">
         <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-        <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#symbol-save"/></svg>
+        <i class="bi bi-save2"></i>
         <span class="button-text">Create</span>
     </button>
 </div>
