--- a/matman/users/templates/registration/login.html
+++ b/matman/users/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
-{% load usertags %}
+
 
 {% block title %}Log-in{% endblock %}
 
@@ -21,12 +21,10 @@
       Login
   </button>
 </form>
-{% get_registration_allowed  as registration_allowed %}
-{% get_pw_reset_allowed  as pw_reset_allowed %}
-{% if registration_allowed %}
+{% if allow_registration %}
 <p>Don't have an account yet? Register <a href="{% url "register" %}">here.</a></p>
 {% endif %}
-{% if pw_reset_allowed %}
+{% if allow_reset_pw %}
 <p>Forgot your password? Reset <a href="{% url "password_reset" %}">here.</a></p>
 {% endif %}
 {% endblock %}
