--- a/matman/items/templates/items/scheme_list.html
+++ b/matman/items/templates/items/scheme_list.html
@@ -6,10 +6,12 @@
 {% block content %}
 <h1>
     <span>Schemes ({{ total }})</span>
+    {% if perms.items.schemes_add %}
     <a href="{% url "add-scheme" %}" class="btn btn-outline-primary" aria-current="page">
         <i class="bi bi-plus-square"></i>
         <span>Add</span>
     </a>
+    {% endif %}
 </h1>
 <table class="table table-striped table-hover">
     <tr>
@@ -36,7 +38,13 @@
     </tr>
     {% for object in object_list %}
     <tr>
-        <th><a href="{% url "edit-scheme" object.id %}">{{ object.name }}</a></th>
+        <th>
+            {% if perms.items.schemes_change %}
+            <a href="{% url "edit-scheme" object.id %}">{{ object.name }}</a>
+            {% else %}
+            {{ object.name }}
+            {% endif %}
+        </th>
         <td>{{ object.description }}</td>
         <td>{{ object.prefix }}</td>
         <td>{{ object.numlen }}</td>
