style updates, deleted unused templates

--- a/matman/items/templates/about.html
+++ b/matman/items/templates/about.html
@@ -14,10 +14,10 @@ Source code is available on <button class="btn btn-outline-primary" href=""><i c
 <i class="bi bi-bootstrap"></i>
 Bootstrap 5
 Bootstrap Icons
-<a href="https://www.djangoproject.com/">Django</a>
-<a href="https://getbootstrap.com/">Bootstrap 5</a>
-<a href="https://icons.getbootstrap.com/">Bootstrap Icons</a>
-<a href="https://github.com/Ionaru/easy-markdown-editor">EasyMDE</a>
+<a href="https://www.djangoproject.com/" class="link-primary">Django</a>
+<a href="https://getbootstrap.com/" class="link-primary">Bootstrap 5</a>
+<a href="https://icons.getbootstrap.com/" class="link-primary">Bootstrap Icons</a>
+<a href="https://github.com/Ionaru/easy-markdown-editor" class="link-primary">EasyMDE</a>
 {% endblock %}
 
 
