--- a/matman/items/templates/items/profile.html
+++ b/matman/items/templates/items/profile.html
@@ -17,7 +17,7 @@
     {% for name, rubric in rubrics.items %}
     <div class="accordion-item">
         <h2 class="accordion-header" id="id_accordion_header_{{ name }}">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#id_collapse_{{ name }}" aria-expanded="true" aria-controls="collapse_{{ name }}">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#id_collapse_{{ name }}" aria-expanded="false" aria-controls="collapse_{{ name }}">
                 {{ rubric.title }} ({{ rubric.total }})
             </button>
         </h2>
