--- a/matman/items/templates/items/material_edit.html
+++ b/matman/items/templates/items/material_edit.html
@@ -21,14 +21,17 @@
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {% crispy form %}
-    <h3>Pictures</h3>
-    <div class="drag-container">
-        {% crispy formset formset_helper %}
-    </div>
-    <button type="button" name="add" class="btn btn-outline-primary m-1" id="add-more">
-        <i class="bi bi-plus-square"></i>
-        <span>Add Picture</span>
-    </button>
+    <section>
+        <h2 class="mt-4">Pictures</h2>
+        <div class="drag-container">
+            {% crispy formset formset_helper %}
+        </div>
+        <button type="button" name="add" class="btn btn-outline-primary m-1" id="add-more">
+            <i class="bi bi-plus-square"></i>
+            <span>Add Picture</span>
+        </button>
+    </section>
+
     <div class="form-buttons m-1">
         <button id="buttonSave" type="submit" value="Save" name="save" class="btn btn-primary" onclick="this.classList.add('loading')">
             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
