--- a/matman/items/templates/items/material_detail.html
+++ b/matman/items/templates/items/material_detail.html
@@ -51,79 +51,91 @@
 </section>
 <section>
     <!--    Details Table    -->
-    <table class="table table-striped table-hover d-inline-flex my-3">
-        <tr>
-            <th>Serial Number:</th>
-            <td>{{ object.serial_number }}</td>
-        </tr>
-        <tr>
-            <th>Material Number:</th>
-            <td>{{ object.part_number }}</td>
-        </tr>
-        <tr>
-            <th>Manufacturer:</th>
-            <td>{{ object.manufacturer }}</td>
-        </tr>
-        <tr>
-            <th>Location:</th>
-            <td>{{ object.location }}</td>
-        </tr>
-        <tr>
-            <th>Owner:</th>
-            <td><a href="{% url "profile" object.owner %}">{{ object.owner }}  class="link-primary"</a></td>
-        </tr>
-        <tr>
-            <th>Tags:</th>
-            <td>
-                {% for tag in object.tags.all %}
-                <a href="{% url "list-material" %}?tags__name={{ tag }}" class="badge text-bg-light">{{ tag }}</a>
-                {% endfor %}
-            </td>
-        </tr>
-        <tr>
-            <th>Active:</th>
-            <td>{{ object.is_active }}</td>
-        </tr>
-        <tr>
-            <th>Borrowed by:</th>
-            {% if borrow %}
-            <td><a href="{% url "profile" borrow.borrowed_by %}" class="link-primary">{{ borrow.borrowed_by }}</a></td>
-            {% else %}
-            <td></td>
-            {% endif %}
-        </tr>
-        <tr>
-            <th>Borrowed since:</th>
-            <td>{{ object.get_active_borrow.borrowed_at|date }}</td>
-        </tr>
-    </table>
+    <section>
+        <table class="table table-striped table-hover d-inline-flex my-3">
+            <tr>
+                <th>Serial Number:</th>
+                <td>{{ object.serial_number }}</td>
+            </tr>
+            <tr>
+                <th>Material Number:</th>
+                <td>{{ object.part_number }}</td>
+            </tr>
+            <tr>
+                <th>Manufacturer:</th>
+                <td>{{ object.manufacturer }}</td>
+            </tr>
+            <tr>
+                <th>Location:</th>
+                <td>{{ object.location }}</td>
+            </tr>
+            <tr>
+                <th>Owner:</th>
+                <td><a href="{% url "profile" object.owner %}" class="link-primary">{{ object.owner }}</a></td>
+            </tr>
+            <tr>
+                <th>Tags:</th>
+                <td>
+                    {% for tag in object.tags.all %}
+                    <a href="{% url "list-material" %}?tags__name={{ tag }}" class="badge text-bg-light">{{ tag }}</a>
+                    {% endfor %}
+                </td>
+            </tr>
+            <tr>
+                <th>Active:</th>
+                <td>{{ object.is_active }}</td>
+            </tr>
+            <tr>
+                <th>Borrowed by:</th>
+                {% if borrow %}
+                <td><a href="{% url "profile" borrow.borrowed_by %}" class="link-primary">{{ borrow.borrowed_by }}</a></td>
+                {% else %}
+                <td></td>
+                {% endif %}
+            </tr>
+            <tr>
+                <th>Borrowed since:</th>
+                <td>{{ object.get_active_borrow.borrowed_at|date }}</td>
+            </tr>
+        </table>
+    </section>
 
     <!--    Description    -->
-    <h4>Description</h4>
-    <div class="border border-dark rounded">
-        {% if object.description %}
-        {{ object.description|markdown }}
-        {% else %}
-        No description available.
-        {% endif %}
-    </div>
+    <section>
+        <h2 class="mt-4">Description</h2>
+        <div class="toast show w-100" aria-live="assertive" aria-atomic="true">
+            <div class="toast-body">
+                {% if object.description %}
+                {{ object.description|markdown }}
+                {% else %}
+                No description available.
+                {% endif %}
+            </div>
+        </div>
+    </section>
 
     <!--    Pictures    -->
-    {% if object.pictures.all %}
-    {% include "items/slideshow.html" with pictures=object.pictures %}
-    {% endif %}
+    <section>
+        {% if object.pictures.all %}
+        {% include "items/slideshow.html" with pictures=object.pictures %}
+        {% endif %}
+    </section>
 
     <!--    Comments and Borrows in chronological order    -->
-    <h4>Comments & Borrows</h4>
-    {% for cb in comments_borrows %}
-    {% if cb.type == "comment" %}
-    {% include "items/comment.html" with comment=cb.object %}
-    {% else %}
-    {% include "items/borrow_toast.html" with borrow=cb.object %}
-    {% endif %}
-    {% endfor %}
+    <section>
+        <h2 class="mt-4">Comments & Borrows</h2>
+        {% for cb in comments_borrows %}
+        {% if cb.type == "comment" %}
+        {% include "items/comment.html" with comment=cb.object %}
+        {% else %}
+        {% include "items/borrow_toast.html" with borrow=cb.object %}
+        {% endif %}
+        {% endfor %}
+    </section>
 
-    <h2>Add Comment</h2>
-    {% crispy comment_form %}
+    <section>
+        <h2 class="mt-4">Add Comment</h2>
+        {% crispy comment_form %}
+    </section>
 {% endwith %}
 {% endblock %}
