updated about dialog, remove dnd for pictures

--- a/matman/items/templates/about.html
+++ b/matman/items/templates/about.html
@@ -7,17 +7,12 @@
 {% block content %}
 <h1>About</h1>
 
+<p>MatMan (short for Material Manager) is licensed under GPLv2.</p>
+<p>
+    Source code is available on
+    <a href="https://github.com/Slarag/matman" target="_blank" rel="noopener noreferrer" class="link-primary" href=""><i class="bi bi-github"></i> Github</a>.
+</p>
 
-Source code is available on <button class="btn btn-outline-primary" href=""><i class="bi bi-github"></i> Github</button>.
-<p><i class="bi bi-github"></i></p>
-
-<i class="bi bi-bootstrap"></i>
-Bootstrap 5
-Bootstrap Icons
-<a href="https://www.djangoproject.com/" class="link-primary">Django</a>
-<a href="https://getbootstrap.com/" class="link-primary">Bootstrap 5</a>
-<a href="https://icons.getbootstrap.com/" class="link-primary">Bootstrap Icons</a>
-<a href="https://github.com/Ionaru/easy-markdown-editor" class="link-primary">EasyMDE</a>
 {% endblock %}
 
 
