Add MatMan to html title

--- a/matman/items/templates/base.html
+++ b/matman/items/templates/base.html
@@ -2,7 +2,7 @@
 <! DOCTYPE html>
 <html>
 <head>
-    <title>{% block title %}{% endblock %}</title>
+    <title>MatMan - {% block title %}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% for resource_name, resource in resources.items %} {% for css_sheet in resource.css %}
     <!--  css for {{ resource_name }}  -->
