add icons and inclusion_tag for boolean values

--- a/matman/items/templates/items/material_detail.html
+++ b/matman/items/templates/items/material_detail.html
@@ -83,7 +83,7 @@
             </tr>
             <tr>
                 <th>Active:</th>
-                <td>{{ object.is_active }}</td>
+                <td>{% bool_icon object.is_active %}</td>
             </tr>
             <tr>
                 <th>Borrowed by:</th>
