check collapsable status also for pagination, refactored js function for checkin collapsable

--- a/matman/items/templates/items/material_table.html
+++ b/matman/items/templates/items/material_table.html
@@ -68,4 +68,4 @@
     <tr><td>None</td></tr>
     {% endfor %}
 </table>
-{% include "pagination.html" with page_obj=page prefix=prefix %}
+{% include "pagination.html" with page_obj=page prefix=prefix onclick="checkCollapsables(this)" %}
