--- a/matman/items/templates/items/material_list.html
+++ b/matman/items/templates/items/material_list.html
@@ -41,6 +41,6 @@
   </div>
 </div>
 
-{% include "items/material_table.html" with prefix="" orderby=orderby direction=direction page=page object_list=object_list %}
+{% include "items/material_table.html" with prefix="" orderby=orderby direction=direction page=page_obj object_list=object_list %}
 {% csrf_token %}
 {% endblock %}
